--- a/scroll-to/index.html
+++ b/scroll-to/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>ƒ√: Do more, with less.</title>
+        <title>Miles.</title>
         <!-- Basic page styling -->
         <link rel="stylesheet" type="text/css" href="base.css">
         <!-- User styling -->
@@ -11,49 +11,44 @@
     <body>
     	<div class="hero" id="top">
     		<div class="hero-image"></div>
-			<h1>Do more, with less.</h1>
+			<h1>Hi, I'm Miles.</h1>
     	</div>
     	<div class="navbar-wrapper">
 	        <nav>
 	        	<div class="content">
 		        	<ul>
 		        		<li class="action-item"><a href="#top"><p>ƒ√</p></a></li>
-		        		<li><a href="#vision"><p>Vision</p></a></li>
-		        		<li><a href="#product"><p>Product</p></a></li>
-		        		<li><a href="#team"><p>Team</p></a></li>
-		        	</ul>
-		        	<ul class="right">
-		        		<li><a href="#"><p>Log in</p></a></li>
-		        		<li class="action-item"><a href="#"><p>Sign up</p></a></li>
+		        		<li><a href="#vision"><p>About Me</p></a></li>
+		        		<li><a href="#product"><p>Skills</p></a></li>
+		        		<li><a href="#team"><p>Contact</p></a></li>
 		        	</ul>
 		        </div>
 	        </nav>
     	</div>
 		<section id="vision">
 			<div class="content">
-				<h1>We Have a Vision</h1>
-				<h2>For a world where users come first</h2>
-				<p>Latte ideate unicorn food-truck hacker latte disrupt integrate user story latte. Innovate viral food-truck paradigm user story food-truck quantitative vs. qualitative responsive intuitive parallax. Disrupt engaging bootstrapping iterate pivot fund venture capital. Entrepreneur long shadow waterfall is so 2000 and late big data innovate physical computing human-centered design minimum viable product piverate fund. Workflow engaging pitch deck ideate pair programming innovate hacker waterfall is so 2000 and late pitch deck actionable insight SpaceTeam latte.</p>
+				<h1>Hi! I'm Miles</h1>
+				<h2>Maker at heart</h2>
+				<p>.</p>
 				<p>Bootstrapping ship it pair programming waterfall is so 2000 and late food-truck long shadow venture capital ship it moleskine sticky note. Pivot sticky note 360 campaign experiential integrate pivot innovate grok SpaceTeam. Piverate iterate user centered design parallax Steve Jobs 360 campaign minimum viable product pitch deck driven user story cortado thought leader innovate human-centered design.</p>
 			</div>
 		</section>
 		<section id="product">
 			<div class="content">
-				<h1>ƒ√ is One-of-a-Kind</h1>
-				<h2>Just like you</h2>
-				<p>Experiential agile 360 campaign user story iterate quantitative vs. qualitative earned media viral actionable insight innovate. Intuitive fund actionable insight disrupt entrepreneur SpaceTeam affordances entrepreneur affordances. Engaging innovate co-working long shadow quantitative vs. qualitative quantitative vs. qualitative quantitative vs. qualitative intuitive minimum viable product disrupt grok. Moleskine latte responsive workflow pair programming hacker human-centered design. Hacker convergence intuitive hacker personas paradigm pair programming minimum viable product quantitative vs. qualitative intuitive.</p>
+				<h1>I know a lot of things</h1>
+				<h2>For example ...</h2>
+				<p>I started coding in high school - on my TI-85. I didn't take my first Java class until college, but I've been hooked ever since. Now I know Java, C/C++, HTML/CSS, Javascript, PHP, and Python, and I thought myself all but three of those. I've done front-end and back-end, research in labs and programming instruction. The common denominator is learning, and doing.</p>
 			</div>
 		</section>
 		<section id="team">
 			<div class="content">
-				<h1>Our Team Cares</h1>
-				<h2>About you, your users, and their experience</h2>
-				<p>Prototype agile waterfall is so 2000 and late co-working affordances pair programming sticky note latte. Human-centered design big data human-centered design physical computing disrupt convergence minimum viable product affordances human-centered design. Latte pitch deck bootstrapping prototype 360 campaign latte disrupt paradigm piverate waterfall is so 2000 and late disrupt.</p>
-				<p>Unicorn grok parallax pitch deck 360 campaign pivot paradigm physical computing earned media actionable insight. Personas ship it sticky note engaging actionable insight iterate fund long shadow parallax. Minimum viable product user story quantitative vs. qualitative disrupt ideate co-working paradigm Steve Jobs personas grok personas. Integrate thought leader venture capital iterate sticky note pair programming responsive sticky note convergence engaging cortado cortado user story.</p>
+				<h1>So now what?</h1>
+				<h2>Contact me!</h2>
+				<p>at GitHub (BatMiles), email (mph2137@columbia.edu), and LinkedIn (Meredith Hilton)</p>
 			</div>
 		</section>
 		<footer>
-			<p><a href="#">built with ❤ in NYC by ƒ√ </a></p>
+			<p><a href="#">built with ❤ in NYC /a></p>
 		</footer>
 		<!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
