--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	        <nav>
 	        	<div class="content">
 		        	<ul>
-		        		<li class="action-item"><a href="#top"><p>ƒ√</p></a></li>
+		        		<li class="action-item"><a href="#top"><p><!></p></a></li>
 		        		<li><a href="#vision"><p>About Me</p></a></li>
 		        		<li><a href="#product"><p>Skills</p></a></li>
 		        		<li><a href="#team"><p>Contact</p></a></li>
@@ -30,7 +30,7 @@
 				<h1>Hi! I'm Miles</h1>
 				<h2>Maker at heart</h2>
 				<p>.</p>
-				<p>Bootstrapping ship it pair programming waterfall is so 2000 and late food-truck long shadow venture capital ship it moleskine sticky note. Pivot sticky note 360 campaign experiential integrate pivot innovate grok SpaceTeam. Piverate iterate user centered design parallax Steve Jobs 360 campaign minimum viable product pitch deck driven user story cortado thought leader innovate human-centered design.</p>
+				<p>I'm a writer, coder, and translator. Before migrating to NYC I lived in Washington, DC, and Sweden. I'm a design junkie, a literature nerd, and an eyeliner afficionado. When not coding or translating (French <-> English) I make things on Scratch, watch Netflix, and bake. </p>
 			</div>
 		</section>
 		<section id="product">
