--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	        <nav>
 	        	<div class="content">
 		        	<ul>
-		        		<li class="action-item"><a href="#top"><p><!></p></a></li>
+		        		<li class="action-item"><a href="#top"><p>Home</p></a></li>
 		        		<li><a href="#vision"><p>About Me</p></a></li>
 		        		<li><a href="#product"><p>Skills</p></a></li>
 		        		<li><a href="#team"><p>Contact</p></a></li>
