--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 		</section>
 		<footer>
-			<p><a href="#">built with ❤ in NYC /a></p>
+			<p><a href='#'>built with ❤ in NYC</a></p>
 		</footer>
 		<!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
