--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="content">
 				<h1>I know a lot of things</h1>
 				<h2>For example ...</h2>
-				<p>I started coding in high school - on my TI-85. I didn't take my first Java class until college, but I've been hooked ever since. Now I know Java, C/C++, HTML/CSS, Javascript, PHP, and Python, and I thought myself all but three of those. I've done front-end and back-end, research in labs and programming instruction. The common denominator is learning, and doing.</p>
+				<p>I started coding in high school - on my TI-85. I didn't take my first Java class until college, but I've been hooked ever since. Now I know Java, C/C++, HTML/CSS, Javascript, PHP, and Python, and I taught myself all but three of those. I've done front-end and back-end, research in labs and programming instruction. The common denominator is learning, and doing.</p>
 			</div>
 		</section>
 		<section id="team">
