--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Miles.</title>
+        <title>Miles!</title>
         <!-- Basic page styling -->
         <link rel="stylesheet" type="text/css" href="base.css">
         <!-- User styling -->
@@ -20,6 +20,7 @@
 		        		<li class="action-item"><a href="#top"><p>Home</p></a></li>
 		        		<li><a href="#vision"><p>About Me</p></a></li>
 		        		<li><a href="#product"><p>Skills</p></a></li>
+		        		<li><a href="#projects"<p>Projects</p></a></li>
 		        		<li><a href="#team"><p>Contact</p></a></li>
 		        	</ul>
 		        </div>
@@ -30,15 +31,24 @@
 				<h1>Hi! I'm Miles</h1>
 				<h2>Maker at heart</h2>
 				<p>.</p>
-				<p>I'm a writer, coder, and translator. Before migrating to NYC I lived in Washington, DC, and Sweden. I'm a design junkie, a literature nerd, and an eyeliner afficionado. When not coding or translating (French <-> English) I make things on Scratch, watch Netflix, and bake. </p>
+				<p>My story begins in Europe, but doesn't really get interesting until I move to the US and learn to write. Since then, I've been making things left and right, mostly bad, some good. Eventually, I found my way to NYC for college, where I code, write, translate, shivver, draw, play, and work hard. I'm a writer, coder, and translator. I'm a design junkie, a literature nerd, an animation connoisseur, and an eyeliner afficionado. When not being productive, my favorite forms of procrastination are making things on Scratch,  I make things on Scratch, watching Netflix, and bakeing. I spend a lot of time wishing my dorm allowed pets, trying to animate, and searching for the perfect coffee. Which shouldn't be hard in NYC, but it is.</p>
 			</div>
 		</section>
 		<section id="product">
 			<div class="content">
 				<h1>I know a lot of things</h1>
 				<h2>For example ...</h2>
-				<p>I started coding in high school - on my TI-85. I didn't take my first Java class until college, but I've been hooked ever since. Now I know Java, C/C++, HTML/CSS, Javascript, PHP, and Python, and I taught myself all but three of those. I've done front-end and back-end, research in labs and programming instruction. The common denominator is learning, and doing.</p>
+				<p>My first 'IDE' was the beautiful screen of my highschool TI-85. I started coding to make my Linear Algebra homework easier, and haven't looked back. Luckily, I've learned some more fruitful languages. Now I code in <strong>Java, C/C++, HTML/CSS, Javascript, PHP, and Python</strong>, and I taught myself all but three of those. I've done front-end and back-end, research in labs, and programming instruction.</p>
+				<p>I'm fluent in French (and English) and am really good at Latin. English is my birth-language, but French is a close second, and I took Latin just for fun. I translate between all three of those langauges, mostly for small buisnesses and individuals, and I'm always ready to tutor. If you need your site translated, hit me up!</p>
 			</div>
+		</section>
+		<section id="projects">
+			<div class="content">
+				<h1>Check it out</h1>
+				<h2>Here's some stuff I've done</h2>
+				<p>This is a work in progress. Check back soon for more!</p>
+			</div>
+			
 		</section>
 		<section id="team">
 			<div class="content">
