--- a/index.html
+++ b/index.html
@@ -38,7 +38,18 @@
 			<div class="content">
 				<h1>I know a lot of things</h1>
 				<h2>For example ...</h2>
-				<p>My first 'IDE' was the beautiful screen of my highschool TI-85. I started coding to make my Linear Algebra homework easier, and haven't looked back. Luckily, I've learned some more fruitful languages. Now I code in <strong>Java, C/C++, HTML/CSS, Javascript, PHP, and Python</strong>, and I taught myself all but three of those. I've done front-end and back-end, research in labs, and programming instruction.</p>
+				<p>My first 'IDE' was the beautiful screen of my highschool TI-85. I started coding to make my Linear Algebra homework easier, and haven't looked back. Luckily, I've learned some more fruitful languages. Now I code in
+					<ul>
+						<strong>
+							<li>Java</li>
+							<li>C/C++</li>
+							<li>PHP</li>
+							<li>HTML/CSS</li>
+							<li>Javascript</li>
+							<li>and Python</li>
+						</strong>
+					</ul>
+					, and I taught myself all but three of those. I've done front-end and back-end, research in labs, and programming instruction.</p>
 				<p>I'm fluent in French (and English) and am really good at Latin. English is my birth-language, but French is a close second, and I took Latin just for fun. I translate between all three of those langauges, mostly for small buisnesses and individuals, and I'm always ready to tutor. If you need your site translated, hit me up!</p>
 			</div>
 		</section>
