--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<h1>Hi! I'm Miles</h1>
 				<h2>Maker at heart</h2>
 				<p>.</p>
-				<p>My story begins in Europe, but doesn't really get interesting until I move to the US and learn to write. Since then, I've been making things left and right, mostly bad, some good. Eventually, I found my way to NYC for college, where I code, write, translate, shivver, draw, play, and work hard. I'm a writer, coder, and translator. I'm a design junkie, a literature nerd, an animation connoisseur, and an eyeliner afficionado. When not being productive, my favorite forms of procrastination are making things on Scratch,  I make things on Scratch, watching Netflix, and bakeing. I spend a lot of time wishing my dorm allowed pets, trying to animate, and searching for the perfect coffee. Which shouldn't be hard in NYC, but it is.</p>
+				<p>My story begins in Europe, but doesn't really get interesting until I move to the US and learn to write. Since then, I've been making things left and right, mostly bad, some good. Eventually, I found my way to NYC for college, where I code, write, translate, shiver, draw, play, and work hard. I'm a writer, coder, and translator. I'm a design junkie, a literature nerd, an animation connoisseur, and an eyeliner afficionado. When not being productive, my favorite forms of procrastination are making things on Scratch,  I make things on Scratch, watching Netflix, and bakeing. I spend a lot of time wishing my dorm allowed pets, trying to animate, and searching for the perfect coffee. Which shouldn't be hard in NYC, but it is.</p>
 			</div>
 		</section>
 		<section id="product">
@@ -49,7 +49,7 @@
 							<li>and Python</li>
 						</strong>
 					</ul>
-					, and I taught myself all but three of those. I've done front-end and back-end, research in labs, and programming instruction.</p>
+				and I taught myself all but three of those. I've done front-end and back-end, research in labs, and programming instruction.</p>
 				<p>I'm fluent in French (and English) and am really good at Latin. English is my birth-language, but French is a close second, and I took Latin just for fun. I translate between all three of those langauges, mostly for small buisnesses and individuals, and I'm always ready to tutor. If you need your site translated, hit me up!</p>
 			</div>
 		</section>
