--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	        <nav>
 	        	<div class="content">
 		        	<ul>
-		        		<li class="action-item"><a href="#top"><p>Home</p></a></li>
-		        		<li><a href="#vision"><p>About Me</p></a></li>
-		        		<li><a href="#product"><p>Skills</p></a></li>
-		        		<li><a href="#projects"<p>Projects</p></a></li>
-		        		<li><a href="#team"><p>Contact</p></a></li>
+		        		<li class="action-item" id="button1"><a href="#top"><p>Home</p></a></li>
+		        		<li><a href="#vision" id="button2"><p>About Me</p></a></li>
+		        		<li><a href="#product" id="button3"><p>Skills</p></a></li>
+		        		<li><a href="#projects" id="button4"></a><p>Projects</p></a></li>
+		        		<li><a href="#team" id="button5"><p>Contact</p></a></li>
 		        	</ul>
 		        </div>
 	        </nav>
