--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	        <nav>
 	        	<div class="content">
 		        	<ul>
-		        		<li class="action-item" data-no="1"><a href="#top"><p>Home</p></a></li>
-		        		<li data-no="2"><a href="#vision"><p>About Me</p></a></li>
-		        		<li data-no="3"><a href="#product"><p>Skills</p></a></li>
-		        		<li data-no="4"><a href="#projects"></a><p>Projects</p></a></li>
-		        		<li data-no="5"><a href="#team"><p>Contact</p></a></li>
+		        		<li class="button" class="action-item" data-no="1"><a href="#top"><p>Home</p></a></li>
+		        		<li class="button" data-no="2"><a href="#vision"><p>About Me</p></a></li>
+		        		<li class="button" data-no="3"><a href="#product"><p>Skills</p></a></li>
+		        		<li class="button" data-no="4"><a href="#projects"></a><p>Projects</p></a></li>
+		        		<li class="button" data-no="5"><a href="#team"><p>Contact</p></a></li>
 		        	</ul>
 		        </div>
 	        </nav>
